# hakathon_room_cv

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.gpu  Makefile  PRD-tasks.md  PRD.md  docker-compose.gpu.yml  docker-compose.yml  final_report.md  plan.md  project-rules.md  pyproject.toml  readme.md  requirements-cuda.txt  requirements.txt
artifacts/: experiment_registry.csv
artifacts/diagnostics/adversarial_validation/: fold_metrics.csv  label_shift.csv  metadata_feature_importance.csv  metrics_summary.json  per_class_summary.csv  predictions.csv  top_examples.csv
artifacts/logits/baseline_v1/: metadata.json  oof_logits.parquet  test_logits.parquet
artifacts/logits/cv03_balanced_sampler/: metadata.json  oof_logits.parquet  test_logits.parquet
artifacts/logits/cv03_baseline_ce/: metadata.json  oof_logits.parquet  test_logits.parquet
artifacts/logits/cv03_ratio_weighting/: metadata.json  oof_logits.parquet  test_logits.parquet
artifacts/logits/cv03_weighted_ce/: metadata.json  oof_logits.parquet  test_logits.parquet
artifacts/logs/: mlflow.db
artifacts/oof/albumentations_v1/: config.yaml  confusion_matrix_oof.csv  fold0_oof_predictions.parquet  (+9 more)
configs/data/: class_mapping.yaml
configs/model/: class_weights_effective_num_0995.yaml  class_weights_sqrt_inv.yaml  cv03_balanced_sampler.yaml  cv03_baseline_ce.yaml  cv03_focal_loss.yaml  cv03_ratio_weighting.yaml  cv03_weighted_ce.yaml  cv04_convnext_small_earlystop_gpu.yaml  cv05_clip_vit_b32.yaml  cv06_clip_vit_l14_laion.yaml  cv07_vit.yaml  cv08_deit.yaml  cv09_swin.yaml  cv10_convnextv2.yaml  cv11_maxvit.yaml  cv12_dinov2.yaml  image_albumentations_v1.yaml  image_baseline_v1.yaml  image_safe_aug_v1.yaml  imbalance_rc1.yaml  model2_v1.yaml  sampler_class_aware_l05.yaml  weak_images_v1.yaml
configs/postprocess/: class_bias_rc1.yaml
configs/release/: rc1.yaml
demo/: README.md  app.py
docs/: AGENT.md  ARCHITECTURE.md  CONTEXT.md  mlflow.md
eval/metrics/: pr_auc.py
logs/: README.txt
mlruns/0/: meta.yaml
models/: baseline_lr_balanced.pkl
notebooks/: CLIP.ipynb  eda.ipynb  mvp.ipynb
releases/rc1/: LICENSES.md  README.md  data_card.md  model_card.md  sha256sums.txt
reports/: DATA_05_report.md  adversarial_validation.md  baseline_metrics_albumentations_v1.md  baseline_metrics_safe_aug_v1.md  baseline_metrics_v1.md  class_bias_tuning_v1.md  class_schema_audit.md  class_weight_ablation_v1.md  class_weights_effective_num_0995.md  class_weights_sqrt_inv.md  cv03_balanced_sampler.md  cv03_baseline_ce.md  cv03_focal_loss.md  cv03_ratio_weighting.md  cv03_weighted_ce.md  cv04_convnext_small_earlystop_gpu.md  cv05_clip_vit_b32.md  cv06_clip_vit_l14_laion.md  cv07_swin.md  cv07_vit.md  cv08_deit.md  cv10_convnextv2.md  cv11_maxvit.md  data_integrity.md  error_taxonomy_v1.md  evaluation_protocol_v2.md  image_filename_mismatch_repair.csv  imbalance_rc1.md  imbalance_strategy_v1.md  label_quality_ratio.md  leakage_report.md  missing_files.csv  mlflow_runs.csv  model2_eval_v1.md  rare_class_board_v1.md  ratio_weighting_ablation_v1.md  rc1_decision.md  sampler_ablation_v2.md  sampler_class_aware_l05.md  weak_images_download_report.md  (+2 more)
scripts/: _bootstrap.py  build_weak_images_v1.py  build_weak_labels_v1.py  data02_build_splits.py  data03_audit_label_quality_ratio.py  integrity.py  make_error_taxonomy.py  make_experiment_registry.py  make_rare_class_board.py  ml_flow_to_csv.py  optimize_class_bias.py  run_adversarial_validation.py  run_all_models.py
src/: export_logits.py
src/datasets/: data02_build_splits.py  data03_audit_label_quality_ratio.py  make_manifest.py  make_weak_labels.py  repair_image_filename_mismatches.py  weak_images_v1.py  weak_labels_v1.py
src/diagnostics/: adversarial_cv.py  adversarial_data.py  adversarial_features.py  adversarial_report.py  embeddings.py
src/inference/: predict.py  validate_submission.py
src/training/: config_loader.py  train_image.py  train_image_clip.py
src/utils/: labeled_data.py
tables/: low_consensus_samples.csv  ratio_bins.csv
tests/: test_adversarial_validation.py  test_config_loader.py  test_repair_image_filename_mismatches.py  test_splits_include_ratio.py  test_training_imbalance.py  test_validate_submission.py  test_weak_images_v1.py  test_weak_labels_v1.py
(+273 files in other folders)
