[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "hakathon-room-cv"
version = "0.1.0"
description = "Room classification notebooks and experiments."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=17.0",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "matplotlib>=3.9",
  "PyYAML>=6.0",
  "omegaconf>=2.3",
  "hydra-core>=1.3",
  "requests>=2.31",
  "albumentations>=2.0",
  "opencv-python-headless>=4.10",
  "Pillow>=10.0",
  "joblib>=1.4",
  "scikit-image>=0.24",
  "psutil>=5.9",
  "timm>=1.0.0",
  "tensorboard>=2.16",
  "tqdm>=4.66",
  "gradio>=5.0",
  "notebook>=7.0",
  "ipykernel>=6.29",
  "transformers>=4.25.0",
  "mlflow>=3.11.1",
  "open-clip-torch>=3.3.0",
  "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "pre-commit>=4.0",
]

cuda = [
  "torch>=2.6",
  "torchvision>=0.21",
  "torchaudio>=2.6",
]

[tool.ruff]
line-length = 99
target-version = "py310"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B"]
ignore = ["E501", "E402", "UP035"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = { version = ">=2.6", optional = true, source = "pytorch-cu128", markers = "sys_platform == 'linux' or sys_platform == 'win32'" }
torchvision = { version = ">=0.21", optional = true, source = "pytorch-cu128", markers = "sys_platform == 'linux' or sys_platform == 'win32'" }
torchaudio = { version = ">=2.6", optional = true, source = "pytorch-cu128", markers = "sys_platform == 'linux' or sys_platform == 'win32'" }

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
